<resources>
    <string name="app_name">MyCC98+</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="about_mycc98">This is new MyCC98, under experiment</string>
    <string name="title_activity_settings">Settings</string>

    <string name="moto_of_zju">诸位在校，有两个问题要自己问问，\n第一，来浙大做什么? \n第二，将来毕业后要做一个什么样的人?</string>
    <string name="preview_when_empty">不认真回答问题，老校长的棺材板要压不住啦~</string>

    <string name="postview_local_template">file:///android_asset/postread/index.html?id=</string>
    <string name="postview_remote_template">http://192.168.123.119:3000/index.html?id=</string>

    <string name="pref_myzone_label">主页自定义版块</string>
    <string name="pref_myzone_label_summary">填写版块编号，默认是缘分天空</string>
    <string name="pref_myzone_sharekey">pref_myzone_sharekey</string>

    <string name="pref_switchubb_md_key">switch_reply_type</string>
    <string name="pref_switchubb_md_title">回复和发帖文本类型</string>
    <string name="pref_switchubb_md_ubb_summary">使用Ubb回复</string>
    <string name="pref_switchubb_md_md_summary">使用Markdown回复</string>


    <string name="pref_ubb_tail_switch_key">pref_ubb_tail_switch</string>
    <string name="pref_ubb_tail_key">pref_ubb_tail_key</string>
    <string name="pref_ubb_tail_title">设置小尾巴</string>
    <string name="pref_ubb_tail_default">via MyCC98+</string>
    <string name="api_cc98_host_part">api-v2.cc98.org</string>
    <string name="bbs_cc98_host_part">www.cc98.org</string>

    <string name="searchview_board_hint">版面搜索</string>
    <string name="searchview_global_hint">全站搜索</string>
    <string name="searchview_result_title">搜索结果: </string>
    <string name="searchview_excessive_keys">少一点关键词吧</string>

    <string name="user_profile_id_url">http://www.cc98.org/user/id/%d</string>
    <string name="user_profile_name_url">http://www.cc98.org/user/name/%s</string>


    <string name="dialog_edit_sendpost_title">请稍等</string>
    <string name="dialog_edit_sendpost_msg">正在发送...</string>

    <string name="menu_post_topic_share">分享</string>
    <string name="editor_newtopic_title">新话题: </string>
    <string name="editor_reply_topic">回复主题</string>
    <string name="editor_reply_topic_success">发帖成功</string>
    <string name="main_activity_gotopic_title">访问指定帖子</string>
    <string name="main_activity_gotopic_msg">帖子编号ID</string>
    <string name="postread_refercontent_to_edit">以下是引用用户[ %s ]的发言:\n%s</string>
    <string name="editor_photo_name_template">\'IMG\'_yyyy-MM-dd_HH-mm-ss.\'jpg\'</string>
    <string name="editor_photo_select_canceled">You canceled!</string>
    <string name="editor_photo_error">Opps, Something is wrong.</string>
    <string name="editor_upload_size_overflow">文件大小超出限制</string>
    <string name="editor_text_size_overflow">文字数量超出限制</string>
    <string name="editor_text_content_null">输入为空</string>
    <string name="editor_text_title_null">标题为空</string>
    <string name="editor_text_quote_template">[quote] %s [/quote]\n</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_tips_ok">刷新完成</string>
    <string name="username_nobody">匿名</string>
    <string name="pushtoloadmore_tips_loading">加载中</string>
    <string name="default_board_name">默认版面</string>
    <string name="default_board_id">184</string>
    <string name="default_board_prefix">版面:</string>
    <string name="default_posts_hasover">没有新的啦</string>
    <string name="pref_userlogin_storage">customer_payed</string>
    <string name="pref_username">username</string>
    <string name="pref_password">password</string>
    <string name="pref_userlast_token">token</string>
    <string name="pref_debug_mode_key">pref_debug_mode_key</string>

    <string name="activity_splash_echo_title">MyCC98 for Android</string>
    <string name="application_opensources_license">Open sources</string>
    <string name="service_update_versionchecker_url">http://api.5pipi.win/mycc98/update.json</string>
    <string name="service_update_versionchecker_url_local">http://192.168.123.119:8080/update.json</string>
    <string name="application_github_website_url">https://github.com/6769/MyNewCC98</string>
    <string name="application_contact_email_addr">5pipitk@gmail.com</string>
    <string name="application_contact_github_user">6769</string>
    <string name="application_share_to_download_title">Share this App</string>
    <string name="application_share_to_download_template">访问[ %s ]下载应用%s.</string>
    <string name="application_share_to_download_url">https://github.com/6769/MyNewCC98/releases</string>

    <string name="share_content_text_title">Share cc98, share your life</string>

    <string name="normal_webview_urlcopied">链接已复制~</string>
    <string name="normal_webview_urlerror">链接异常 无法打开页面 已复制到剪贴板</string>
    <string name="normal_webview_urlshare_template">[%s]: %s</string>
    <string name="cc98topic_urlshare_template">[%s]: http://www.cc98.org/topic/%s </string>

    <string name="activity_photo_view_title">PhotoView</string>
    <string name="emotion_group_folder">postread/images</string>
    <string name="menu_postread_long_screen_capture">长截图</string>
    <string name="menu_postread_short_screen_capture">截图</string>
    <string name="menu_postread_long_screen_capture_failed_msg">图像太长，无法截图</string>
</resources>
