<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_postread_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/menu_post_topic_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_postread_short_screen_capture"
        android:title="@string/menu_postread_short_screen_capture"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_postread_long_screen_capture"
        android:title="@string/menu_postread_long_screen_capture"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_postread_setting"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>